--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Messages#index</h1>
-<p>Find me in app/views/messages/index.html.erb</p>
+<div class="wrapper">
+  <div class="side_bar">
+    <%= render "side_bar" %>
+      <div class="side_top">
+      </div>
+      <div class="side_bottom">
+      </div>
+  </div>  
+  <div class="main_chat">
+    <%= render "main_chat" %>
+      <div class="main_top">
+      </div>
+      <div class="main_middle">
+      </div>
+      <div class="main_bottom">
+      </div>
+  </div>  
+</div>
