サイドバーとチャット画面レイアウト作成(再)

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,18 +1,8 @@
 <div class="wrapper">
   <div class="side_bar">
     <%= render "side_bar" %>
-      <div class="side_top">
-      </div>
-      <div class="side_bottom">
-      </div>
-  </div>  
-  <div class="main_chat">
+  </div>
+  <div class="chat">
     <%= render "main_chat" %>
-      <div class="main_top">
-      </div>
-      <div class="main_middle">
-      </div>
-      <div class="main_bottom">
-      </div>
-  </div>  
+  </div>
 </div>
