--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -8,37 +8,37 @@
   background-color: #253141;
 }
 
-.side_top{
+.side-bar-header{
   height: 100px;
   background-color: #253141;
   padding: 0 20px;
 }
 
-.side_bottom{
-  background-color: #2F3E51;
+.rooms{
   height: calc(100vh - 100px);
+  background-color: #2F3E51;
   padding: 0 20px;
 }
 
-.main_chat{
-  width: calc( 100vw - 300px );
-  background-color: #ffffff;
+.chat{
+  background-color: #FFFFFF;
+  width: calc(100vw - 300px);
 }
 
-.main_top{
+.chat-header{
   height: 100px;
   background-color: #FFFFFF;
   padding: 0 40px;
 }
 
-.main_middle{
+.messages{
   height: calc(100vh - 100px - 90px);
   background-color: #FAFAFA;
   padding: 46px 40px 0;
 }
 
-.main_bottom{
+.form{
   height: 90px;
   background-color: #DDDDDD;
-  padding: 20px, 40px;
+  padding: 20px 40px;
 }
